--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Для красивого и правильного отображения на телефонах -->
     <meta name-"desc" content="Это мой первый пример страницы"> <!-- описание страницы -->
     <meta name-"author" content="Ivan"> <!-- автор страницы -->
-    <title>Hello</title>
+    <title>Hello world</title>
     <link rel="stylesheet" href="css/style.css"> <!-- подключение стилей -->
 
 </head>
